@@ -24,7 +24,7 @@
 	</modules>
 
 	<properties>
-		<java.version>21</java.version>
+		<java.version>25</java.version>
 
 		<logstash-logback-encoder.version>8.1</logstash-logback-encoder.version>
 		<camel-spring-boot-bom.version>4.16.0</camel-spring-boot-bom.version>
@@ -183,6 +183,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
+				<configuration>
+					<argLine>--enable-preview</argLine>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -202,6 +205,20 @@
 							<vendor>openjdk</vendor>
 						</jdk>
 					</toolchains>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<enablePreview>true</enablePreview>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>${lombok.version}</version>
+						</path>
+					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
 		</plugins>
